force-app/main/default/objects/Students__c.object
<CustomObject>
    <fields>
        <fullName>Guru__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guru</label>
        <referenceTo>Teachers__c</referenceTo>
        <relationshipLabel>Student</relationshipLabel>
        <relationshipName>Student</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <label>Parent Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parents_Email_ID__c</fullName>
        <label>Parents Email ID</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pop_Up_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pop Up Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Marks__c</columns>
        <columns>Guru__c</columns>
        <columns>Parents_Email_ID__c</columns>
        <columns>Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>